[package]
name = "enso-install"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
dirs = { workspace = true }
enso-install-config = { path = "config" }
ide-ci = { path = "../ci_utils" }
named-lock = "0.4.1"
serde_json = { workspace = true }
strum = { workspace = true }
sysinfo = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
windows = { workspace = true }
derive_more = { workspace = true }

[target.'cfg(windows)'.dependencies]
mslnk = "0.1.8"
native-windows-gui = { workspace = true }
winreg = { workspace = true }

[build-dependencies]
embed-resource = "2.4.0"
ide-ci = { path = "../ci_utils" }
enso-install-config = { path = "config" }

[lints]
workspace = true
