[package]
name    = "flexer"
version = "0.1.0"
authors = [
  "Enso Team <enso-dev@enso.org>",
  "Ara Adkins <ara.adkins@enso.org"
]
edition = "2018"

description  = "A finite-automata-based lexing engine."
readme       = "README.md"
homepage     = "https://github.com/enso-org/enso"
repository   = "https://github.com/enso-org/enso"
license-file = "../../LICENSE"

keywords = ["lexer", "finite-automata"]
categories = ["parsing"]

publish = false

[lib]
name       = "flexer"
crate-type = ["cdylib", "rlib"]
test       = true
bench      = true

[dependencies]
itertools = "0.8"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.2"
