java_library(
    name = "http-test-helper",
    srcs = glob(["src/main/java/**/*.java"]),
    #main_class = "org.enso.shttp.HTTPTestHelperServer",
    deps = [
        "@maven//:org_apache_commons_commons_text",
        "@maven//:org_apache_httpcomponents_httpclient",
        "@maven//:org_apache_httpcomponents_httpcore",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_core_jackson_core"
    ],
    visibility = ["//lib:__subpackages__"],
)