[package]
name = "wstest"
version = "0.1.0"
authors = ["Enso Team <contact@enso.org>"]
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive"] }
futures = "0.3"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.19.2", features = ["full"] }
url = "2.2"
websocket-lite = "0.5"
