[package]
name = "enso-config"
version = "0.1.0"
authors = ["Enso Team <contact@enso.org>"]
edition = "2021"

[dependencies]
ensogl = { path = "../../../lib/rust/ensogl" }
enso-prelude = { path = "../../../lib/rust/prelude" }
enso-json-to-struct = { path = "../../../lib/rust/json-to-struct" }
semver = "1.0.0"

[build-dependencies]
config-reader = { path = "../../../lib/rust/config-reader" }
